--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,12 @@
   font-style: normal;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .auth-card-img{
   width: 120px;
   height: 80px;
