update: modals optimized for mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -756,6 +756,10 @@ hr.default {
     width: 86%;
     text-align: center;
   }
+
+  .modal-middle-main{
+    width: 90%;
+  }
 }
 
 /* Image Avator Upload */
